--- a/_config.yml
+++ b/_config.yml
@@ -2,20 +2,20 @@ nav:
   Home: /
   About: /about/
 #  Writing: /archives/
-#  Projects: http://github.com/probberechts
+#  Projects: http://github.com/darksmile
 
-projects_url: http://github.com/probberechts
+projects_url: http://github.com/darksmile
 
 customize:
     gravatar:
-        email: shirin.nikita@gmail.com
+        email:
     logo:
         enabled: true
         width: 50
         height: 50
         url: /images/logo.png
         gravatar: false
-    favicon: 
+    favicon:
       # eg. generate with http://realfavicongenerator.net/
       desktop:
         url: /images/favicon.ico
